--- a/src/app/advantages/advantages.component.html
+++ b/src/app/advantages/advantages.component.html
@@ -20,6 +20,7 @@
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
+  <span> <a href="gallery">ВІДГУКИ</a></span>
 
 
   <div (click)="toggleNavbar()" id="nav_butt"><img src="./assets/images/Menu Icon.png" alt=""></div>
@@ -31,6 +32,7 @@
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
+  <span> <a href="gallery">ВІДГУКИ</a></span>
 
 </div>
 
