--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -579,14 +579,14 @@ margin-top: -20px;
   #logo{
 
     width:100px;
-    margin-top: 20px; 
+    margin-top: 10px; 
     height: 70px;
     }
     #logo1 img{
     height: 80px;
     width: 80px;
     
-    margin-top: 20px;
+    margin-top: 10px;
       }
     
     @media screen and (max-width: 1000px) {
@@ -750,3 +750,10 @@ padding-right: 70px;
     }
 
   
+    @media screen and (max-width: 600px) {
+.carousel {
+
+  margin-top: -70px;
+}
+
+    }
