--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -582,5 +582,13 @@ margin-top: -20px;
         height: 50px;
         }
     
+ 
      
     }
+
+    @media screen and (max-width: 760px) {
+    .carousel {
+      margin-top: -50px;
+      margin-bottom: -50px;
+    }
+  }
