--- a/src/app/advantages/advantages.component.html
+++ b/src/app/advantages/advantages.component.html
@@ -17,10 +17,12 @@
   <span><a href=""><img id="logo" src="./assets/images/logo.svg" alt=""></a></span>
   <div id="logo1"><img src="./assets/images/logo.svg" alt=""></div>
   <span id="adv"> <a href="">ГОЛОВНА</a></span>
+  <span> <a href="about">ПРО МЕНЕ</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
   <span> <a href="gallery">ВІДГУКИ</a></span>
+ 
 
 
   <div (click)="toggleNavbar()" id="nav_butt"><img src="./assets/images/Menu Icon.png" alt=""></div>
@@ -29,6 +31,7 @@
 
 <div id="mob_menu" [ngClass]="{ 'show': navbarOpen }">
   <span> <a href="">ГОЛОВНА</a></span>
+  <span> <a href="about">ПРО МЕНЕ</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
