--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,6 +17,7 @@
   <span><a href=""><img id="logo" src="./assets/images/logo.svg" alt=""></a></span>
   <div id="logo1"><img src="./assets/images/logo.svg" alt=""></div>
   <span id="adv"> <a href="">ГОЛОВНА</a></span>
+  <span> <a href="about">ПРО МЕНЕ</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
@@ -28,6 +29,7 @@
 
 <div id="mob_menu" [ngClass]="{ 'show': navbarOpen }">
   <span > <a href="">ГОЛОВНА</a></span>
+  <span> <a href="about">ПРО МЕНЕ</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
