--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -586,6 +586,10 @@ a:hover{
 
   }
 
+  #j {
+padding: 20px; font-size: 20px; font-family: 'Futura Pt'; display: flex; flex-direction: row; align-items: stretch; justify-content: space-between; 
+  }
+
   span {
     color: #262626;
   }
@@ -602,9 +606,95 @@ a:hover{
     display: flex; flex-direction: row; margin-top: 50px;
  }
 
+ #rrr {
+  display: flex; flex-direction: row; justify-content:space-between; align-items: left; width: 80%; 
+ }
+
+ #i1, #i2{
+  width:20px
+ }
+
+ .n{
+  display: inline-block; width: 20%; text-align: center;  margin-top: -14px;
+ }
+
+ #l{
+ text-align: center; margin-top: 40px; margin-bottom: 20px;
+ }
+
+ .g {
+  display: flex; flex-direction: column;  width: 20%; text-align: center;
+ }
+
+ @media screen and (max-width: 1000px) {
+  #hd {
+    display: flex; flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+ }
+
+ #j{
+  flex-direction: column;
+ }
+
+ .g {
+ width: 100%; 
+ }
+
+
+ 
+
+ #exp div{
+  text-align: center;
+ }
+
+ #exp1 div{
+  text-align: center;
+ }
+ .n{
+  width: 100%;
+ }
+
+ #i1, #i2{
+  width:14px;
+
+ }
+
+ hr{
+  display: none;
+ }
+
+ #l{
+margin-top: 20px;
+ }
+ html {
+  min-width: 300px;
+ }
+
+ #rrr {
+  display: flex; flex-direction: column; justify-content:space-between; align-items: center;
+  margin-top: -30px;
+ }
+
+ #rrr span {
+  display: block;
+  margin-bottom: 10px;
+ }
+ }
+
+ @media screen and (max-width: 760px) {
+
+  #hd {
+ margin-top: -130px;
+ }
+ }
+
  #hd1 {
    width: 70%; display: flex; flex-direction: column; align-items: center
  }
+
+
 
  #hd2 {
     width: 30%;
@@ -613,6 +703,29 @@ a:hover{
  #hd2 img {
  width: 200px; height: 230px;
  }
+
+ @media screen and (max-width: 1000px) {
+  #hd1{
+    width: 100%;
+    padding-top: 180px;
+  }
+  
+  #hd2 {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    width: 100%;
+   margin-top: -160px;
+  }
+
+  #hd2 img {
+    width: 150px; height: 180px; 
+    
+    }
+   }
+
 
 #about {
   display: flex; flex-direction: row
@@ -623,4 +736,260 @@ a:hover{
 
 #exp span, #exp1 span{
   display: block; text-align: center; margin-top: 5px; margin-bottom: 5px; color: #838383;
+}
+
+ 
+#foot1 {
+  width: 20%;
+}
+
+#foot2 {
+  width:12%;display:flex; justify-content: space-around;
+  text-align: left;
+  margin-left: 30px;
+}
+
+#foot3 {
+  width: 20%; text-align: right;
+}
+
+#footer{
+  padding: 60px; display: flex; justify-content: space-evenly; line-height: 30px;
+}
+
+@media screen and (max-width: 400px) {
+#navbar {
+  width: 104vw;
+}
+}
+@media screen and (max-width: 760px) {
+#reg_online_div {
+  margin-bottom:0px;
+}
+  #inst{
+    margin-top: -150px;
+
+  }
+
+  #comp {
+    padding-top: 30px;
+  }
+
+  #foot1 {
+    width: 80%;
+    text-align: center;
+    display: block;
+margin-top: 180px;
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 16px;
+  }
+
+  #navbar {
+    width: 103vw;
+  }
+  #nav_butt{
+margin-left: -200px;
+  }
+  
+  #foot2 {
+    width:60%;display:flex; justify-content: space-around;
+    text-align: center;
+    align-items: center;
+
+    display: flex;
+
+    margin-bottom: 30px;
+ 
+    margin-left: 0px;
+  }
+
+  #foot2 img {
+    width: 30px;
+  }
+  .carousel {
+padding-top: 17px;
+  }
+  #foot3 {
+    width: 100%; text-align: center;
+    font-size: 16px;
+  }
+
+  #footer {
+     display: flex; flex-direction: column; justify-content: center; line-height: 30px; padding-bottom: 230px;
+     padding-left: 90px;
+  }
+}
+#c2 {
+  display: none;
+}
+
+@media screen and (max-width: 400px) {
+  #navbar {
+    width: 104vw;
+  }
+}
+
+@media screen and (max-width: 770px) {
+
+  #c1 {
+    display: none;
+  }
+
+
+  #c2 {
+    display: block;
+    margin-top: -165px;
+  }
+  }
+
+  iframe {
+    width:600px;
+    height:500px;
+  }
+  
+#iframe {
+display: flex; justify-content: center; margin-bottom: 70px;
+margin-top: -20px;
+}
+
+  @media screen and (max-width: 760px) {
+    iframe {
+      width:400px;
+      height:300px;
+
+    }
+
+    #iframe {
+    margin-left: -200px;
+    margin-bottom: -130px;
+    margin-top: 30px;
+    }
+    
+    
+  }
+
+  .txt {
+      font-size: 26px;
+      color: #262626;
+      font-family: "Futura Pt";
+
+  }
+
+.advantage  img {
+      width: 270px;
+       height:180px;
+  }
+
+  .advantage{
+      flex-wrap: nowrap
+  }
+  .highlight {
+      color: #77ABA5;
+      display: inline;
+  }
+  #bod {
+      margin: 50px 100px;
+  }
+  @media screen and (max-width: 1000px) {
+      #bod {
+          margin-top: -110px;
+      }
+      .advantage   img {
+          width: 300px;
+           height:180px;
+      }
+      .highlight {
+          color: #77ABA5;
+          display: block;
+      }
+
+  .advantage {
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+  .txt {
+      text-align: center;
+      width: 150%;
+  }
+
+  #bod {
+    margin: 50px 10px;
+    margin-top: -120px;
+}
+
+  }
+
+
+a:hover{
+color: #77ABA5;
+}
+
+@media screen and (max-width: 1100px) and (min-width: 760px) {
+#bod {
+    margin-top: 50px;
+}
+}
+
+#logo{
+
+width:100px;
+margin-top: 10px; 
+height: 70px;
+}
+#logo1 img{
+height: 80px;
+width: 80px;
+
+margin-top: 10px;
+  }
+
+@media screen and (max-width: 1000px) {
+  #logo{
+    width:70px;
+    margin-top: 20px; 
+    height: 50px;
+    }
+
+ 
+}
+
+
+
+@media screen and (max-width: 1000px) {
+
+
+.advantage  img {
+  width: 250px;
+   height:180px;
+}
+
+}
+
+footer span {
+  color: white;
+}
+
+#footer {
+  margin-top: 60px;
+}
+
+#navbar span {
+  font-size: 18px;
+}
+
+@media screen and (max-width: 1000px) {
+  #navbar span {
+    font-size: 14px;
+  }
+
+  #logo{
+    margin-top: 10px;
+  }
+
+}
+
+#mob_menu span :hover{
+  color: white;
+  cursor:default
 }
