--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -38,303 +38,293 @@
 
 </div>
 
-<div [ngClass]="{ 'show2': navbarOpen }">
+<html [ngClass]="{ 'show2': navbarOpen }">
 
 <div id="hd">
-    <div id="hd1">
-        <span id="name" style="">Олександр Костенко</span>
-        <span style="color:#77ABA5; margin-top: -35px;">лікар-ортодонт</span>
-        <div style="display: flex; flex-direction: row; justify-content:space-between; align-items: left; width: 80%; ">
-<span><img width="20px"  src="./assets/images/email.png" alt=""> kostenko196@gmail.com</span>
-<span><img width="20px"  src="./assets/images/smartphone.png" alt=""> +380935247313</span>
-        </div>
-
+  <div id="hd1">
+    <span id="name" style="">Олександр Костенко</span>
+    <span style="color:#77ABA5; margin-top: -35px;">лікар-ортодонт</span>
+    <div id="rrr">
+      <span><img id="i1" src="./assets/images/email.png" alt=""> kostenko196@gmail.com</span>
+      <span><img id="i2" src="./assets/images/smartphone.png" alt=""> +380935247313</span>
     </div>
 
-    <div id="hd2">
-<img  src="./assets/images/ava.jpg" alt="">
-    </div>
-
-</div>
-<div style="text-align: center; margin-top: 40px; margin-bottom: 20px;"><img width="100%" height="2px" src="./assets/images/Rectangle 21.png"
-  alt=""></div>
-  <div id="about">
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
-<span style="display: inline-block; width: 20%; text-align: center;  margin-top: -14px;">
-  Коротка інформація
-</span>
-
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
-
-</div>
-<div style="padding: 20px; margin-bottom: -25px; font-size: 20px; font-family: 'Futura Pt' ">Лікар-ортодонт, працюю лише в найсучасніших техніках і якісними матеріалами. Близько 100 активних та 50 закінчених ортодонтичних пацієнтів. Маю спеціалізацію з ортодонтії, активно і регулярно відвідую фахові курси, майстер-класи та вебінари. Доступне для перегляду портфоліо та фото пацієнтів на етапах лікування. Досвід в ортодонтії більше 3,5 років. Викладаю в ДВНЗ "Ужгородський національний університет".</div>
-
-
-
-<div style="text-align: center; margin-top: 40px; margin-bottom: 20px;"><img width="100%" height="2px" src="./assets/images/Rectangle 21.png"
-  alt=""></div>
-  <div id="about">
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
-<span style="display: inline-block; width: 20%; text-align: center;  margin-top: -14px;">
-  Професійні вміння
-</span>
-
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
-
-</div>
-
-<div style="padding: 20px; font-size: 20px; font-family: 'Futura Pt'; display: flex; flex-direction: row; align-items: stretch; justify-content: space-between; ">
-<div style="display: flex; flex-direction: column;  width: 20%; text-align: center;">
-
-<div style="margin-bottom: 20px;">
-техніка прямої дуги
-</div>
-<div style="margin-bottom: 20px;">
-мікро імпланти
-</div>
-
-<div style="margin-bottom: 20px;">
-  створення та збереження Smile Arch
-</div>
-
-<div style="margin-bottom: 20px;">
-  пружини Гудмана, крючки, відкриваючі/закриваючі пружини, еластичні тяги
-</div>
-
-<div style="margin-bottom: 20px;">
-  два види ретенції: ретейнер і капи одночасно
-</div>
-
-<div style="margin-bottom: 20px;">
- робота різними матерілами, переважно американськими
-</div>
-
-<div style="margin-bottom: 20px;">
-  оклюзивні накладки
-</div>
-
-<div style="margin-bottom: 20px;">
-  ведення цифрової документації
-</div>
-
-
-</div>
-<div style="display: flex; flex-direction: column; width: 20%; text-align: center;">
-
-  <div style="margin-bottom: 20px;">
-    самолігатурні брекети
   </div>
-  <div style="margin-bottom: 20px;">
-    робота з широкими дугами 
+
+  <div id="hd2">
+    <img src="./assets/images/ava.jpg" alt="">
   </div>
-  
-  <div style="margin-bottom: 20px;">
-    непряма фіксація
-  </div>
-  
-  <div style="margin-bottom: 20px;">
-    вигини по Шпеє-Антишпеє для корекції канту
-  </div>
-  
-  <div style="margin-bottom: 20px;">
-    психологічна робота з пацієнтами, їх підтримка
-  </div>
-  
-  <div style="margin-bottom: 20px;">
-    робота з видаленнями і без
-  </div>
-  
-  <div style="margin-bottom: 20px;">
-    індивідуальне позиціонування
-  </div>
-  <div style="margin-bottom: 20px;">
-    робота з КТ
-  </div>
-  <div style="margin-bottom: 20px;">
-    цифрова фіксація брекетів
-  </div>
-  </div>
-  <div style="display: flex; flex-direction: column; width: 20%; text-align: center;">
+
+</div>
+<div id="l" ><img width="100%" height="2px"
+    src="./assets/images/Rectangle 21.png" alt=""></div>
+<div id="about">
+  <hr width="40%;" color="#262626" size="3" align="left">
+  <span class="n">
+    Коротка інформація
+  </span>
+
+  <hr width="40%;" color="#262626" size="3" align="left">
+
+</div>
+<div style="padding: 20px; margin-bottom: -25px; font-size: 20px; font-family: 'Futura Pt'; text-align: center; ">Лікар-ортодонт, працюю лише
+  в найсучасніших техніках і якісними матеріалами. Близько 100 активних та 50 закінчених ортодонтичних пацієнтів. Маю
+  спеціалізацію з ортодонтії, активно і регулярно відвідую фахові курси, майстер-класи та вебінари. Доступне для
+  перегляду портфоліо та фото пацієнтів на етапах лікування. Досвід в ортодонтії більше 3,5 років. Викладаю в ДВНЗ
+  "Ужгородський національний університет".</div>
+
+
+
+<div style="text-align: center; margin-top: 40px; margin-bottom: 20px;"><img width="100%" height="2px"
+    src="./assets/images/Rectangle 21.png" alt=""></div>
+<div id="about">
+  <hr width="40%;" color="#262626" size="3" align="left">
+  <span class="n">
+    Професійні вміння
+  </span>
+
+  <hr width="40%;" color="#262626" size="3" align="left">
+
+</div>
+
+<div id="j">
+  <div class="g">
 
     <div style="margin-bottom: 20px;">
-      керамічні брекети
+      🚀 техніка прямої дуги
     </div>
     <div style="margin-bottom: 20px;">
-      вистоке розташування брекетів
+      🚀 мікро імпланти
     </div>
-    
+
     <div style="margin-bottom: 20px;">
-     робота з еластиками
+      🚀 створення та збереження Smile Arch
     </div>
-    
+
     <div style="margin-bottom: 20px;">
-      реставрації в процесі ортолікування
+      🚀 пружини Гудмана, крючки, відкриваючі/закриваючі пружини, еластичні тяги
     </div>
-    
+
     <div style="margin-bottom: 20px;">
-      самостійно розроблена документація для ортодонтії (кожний прийом, рекомендації, брошури)
+      🚀 два види ретенції: ретейнер і капи одночасно
     </div>
-    
+
     <div style="margin-bottom: 20px;">
-      переліковування чужих пацієнтів
+      🚀 робота різними матерілами, переважно американськими
     </div>
-    
+
     <div style="margin-bottom: 20px;">
-      пасивне самолігування
+      🚀 оклюзивні накладки
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 ведення цифрової документації
+    </div>
+
+
+  </div>
+  <div class="g">
+
+    <div style="margin-bottom: 20px;">
+      🚀 самолігатурні брекети
     </div>
     <div style="margin-bottom: 20px;">
-      співпраця з імплантологами
+      🚀 робота з широкими дугами
     </div>
-  
+
+    <div style="margin-bottom: 20px;">
+      🚀 непряма фіксація
     </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 вигини по Шпеє-Антишпеє для корекції канту
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 психологічна робота з пацієнтами, їх підтримка
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 робота з видаленнями і без
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 індивідуальне позиціонування
+    </div>
+    <div style="margin-bottom: 20px;">
+      🚀 робота з КТ
+    </div>
+    <div style="margin-bottom: 20px;">
+      🚀 цифрова фіксація брекетів
+    </div>
+  </div>
+  <div class="g">
+
+    <div style="margin-bottom: 20px;">
+      🚀 керамічні брекети
+    </div>
+    <div style="margin-bottom: 20px;">
+      🚀 вистоке розташування брекетів
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 робота з еластиками
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 реставрації в процесі ортолікування
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 самостійно розроблена документація для ортодонтії (кожний прийом, рекомендації, брошури)
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 переліковування чужих пацієнтів
+    </div>
+
+    <div style="margin-bottom: 20px;">
+      🚀 пасивне самолігування
+    </div>
+    <div style="margin-bottom: 20px;">
+      🚀 співпраця з імплантологами
+    </div>
+
+  </div>
 </div>
 
-<div style="text-align: center; margin-top: 0px; margin-bottom: 20px;"><img width="100%" height="2px" src="./assets/images/Rectangle 21.png"
-  alt=""></div>
-  <div id="about">
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
-<span style="display: inline-block; width: 20%; text-align: center;  margin-top: -14px;">
-  Досвід роботи
-</span>
+<div style="text-align: center; margin-top: 0px; margin-bottom: 20px;"><img width="100%" height="2px"
+    src="./assets/images/Rectangle 21.png" alt=""></div>
+<div id="about">
+  <hr width="40%;" color="#262626" size="3" align="left">
+  <span class="n">
+    Досвід роботи
+  </span>
 
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
+  <hr width="40%;" color="#262626" size="3" align="left">
 
 </div>
 
-<div id="exp" style="padding: 20px; font-size: 20px; font-family: 'Futura Pt'; display: flex; flex-direction: column; align-items: center; gap: 20px; justify-content: center; ">
-<div>
-<div>Стоматологія "Focus"</div>
-<span>лікар-стоматолог</span>
-<span>06/2022 - тепер. час</span>
-</div>
+<div id="exp"
+  style="padding: 20px; font-size: 20px; font-family: 'Futura Pt'; display: flex; flex-direction: column; align-items: center; gap: 20px; justify-content: center; ">
+  <div>
+    <div>Стоматологія "Focus"</div>
+    <span>лікар-стоматолог</span>
+    <span>06/2022 - тепер. час</span>
+  </div>
 
-<div>
-  <div>Стоматологія "PrimaDent"</div>
-  <span>лікар-стоматолог</span>
-  <span>04/2022 - тепер. час</span>
+  <div>
+    <div>Стоматологія "PrimaDent"</div>
+    <span>лікар-стоматолог</span>
+    <span>04/2022 - тепер. час</span>
   </div>
 
   <div>
     <div>Стоматологія "Platinum"</div>
     <span>лікар-ортодонт</span>
     <span>10/2021 - тепер. час</span>
-    </div>
+  </div>
 
-    <div>
-      <div>Стоматологія "Smile Studio"</div>
-      <span>лікар-ортодонт</span>
-      <span>02/2022 - тепер. час</span>
-      </div>
+  <div>
+    <div>Стоматологія "Smile Studio"</div>
+    <span>лікар-ортодонт</span>
+    <span>02/2022 - тепер. час</span>
+  </div>
 
-      <div>
-        <div>Стоматологія "H&B" (м. Берегове)</div>
-        <span>лікар-ортодонт</span>
-        <span>03/2021 - тепер. час</span>
-        </div>
+  <div>
+    <div>Стоматологія "H&B" (м. Берегове)</div>
+    <span>лікар-ортодонт</span>
+    <span>03/2021 - тепер. час</span>
+  </div>
 
-        <div>
-          <div>ДВНЗ "Ужгородський національний університет"</div>
-          <span>асистент кафедри</span>
-          <span>09/2020 - тепер. час</span>
-          </div>
+  <div>
+    <div>ДВНЗ "Ужгородський національний університет"</div>
+    <span>асистент кафедри</span>
+    <span>09/2020 - тепер. час</span>
+  </div>
 
-          
 
-          <div>
-            <div>Стоматологія White Ужгород</div>
-            <span>лікар-ортодонт, співдиректор, співвласник</span>
-            <span>09/2020 - тепер. час</span>
-            </div>
 
-            <div>
-              <div>Стоматологія "Синергія"</div>
-              <span>лікар-ортодонт</span>
-              <span>09/2020 - 02/2022</span>
-              </div>
+  <div>
+    <div>Стоматологія White Ужгород</div>
+    <span>лікар-ортодонт, співдиректор, співвласник</span>
+    <span>09/2020 - тепер. час</span>
+  </div>
+
+  <div>
+    <div>Стоматологія "Синергія"</div>
+    <span>лікар-ортодонт</span>
+    <span>09/2020 - 02/2022</span>
+  </div>
 </div>
 
-<div style="text-align: center; margin-top: 0px; margin-bottom: 20px;"><img width="100%" height="2px" src="./assets/images/Rectangle 21.png"
-  alt=""></div>
-  <div id="about">
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
-<span style="display: inline-block; width: 20%; text-align: center;  margin-top: -14px;">
-  Освіта
-</span>
+<div style="text-align: center; margin-top: 0px; margin-bottom: 20px;"><img width="100%" height="2px"
+    src="./assets/images/Rectangle 21.png" alt=""></div>
+<div id="about">
+  <hr width="40%;" color="#262626" size="3" align="left">
+  <span class="n">
+    Освіта
+  </span>
 
-  <hr width="40%;" 
-  color="#262626" 
-  size="3" 
-  align="left"> 
+  <hr width="40%;" color="#262626" size="3" align="left">
 
 </div>
-<div id="exp1" style="padding: 20px; font-size: 20px; font-family: 'Futura Pt'; display: flex; flex-direction: column; align-items: center; gap: 20px; justify-content: center; ">
+<div id="exp1"
+  style="padding: 20px; font-size: 20px; font-family: 'Futura Pt'; display: flex; flex-direction: column; align-items: center; gap: 20px; justify-content: center; ">
   <div>
     <div>ДВНЗ "Ужгородський національний університет"</div>
     <span>аспірантура, здобувач ступеня доктора філософії</span>
     <span>2020 - тепер. час</span>
-    </div>
-
-    <div>
-      <div>ДВНЗ "Ужгородський національний університет"</div>
-      <span>спеціалізація з ортодонтії</span>
-      <span>2020 - 2021</span>
-      </div>
-
-      <div>
-        <div>ДВНЗ "Ужгородський національний університет"</div>
-        <span>інтернатура, стоматологічний факультет</span>
-        <span>2018 - 2020</span>
-        </div>
-
-        <div>
-          <div>ДВНЗ "Ужгородський національний університет"</div>
-          <span>юридичний факультет, бакалавр права</span>
-          <span>2014 - 2019</span>
-          </div>
-
-          <div>
-            <div>ДВНЗ "Ужгородський національний університет"</div>
-            <span>стоматологічний факультет, спеціаліст</span>
-            <span>2013 - 2018</span>
-            </div>
   </div>
 
-  <div style="text-align: center; margin-top: 0px; margin-bottom: 20px;"><img width="100%" height="2px" src="./assets/images/Rectangle 21.png"
-    alt=""></div>
-    <div id="about">
-    <hr width="40%;" 
-    color="#262626" 
-    size="3" 
-    align="left"> 
-  <span style="display: inline-block; width: 20%; text-align: center;  margin-top: -14px;">
-   Про себе
+  <div>
+    <div>ДВНЗ "Ужгородський національний університет"</div>
+    <span>спеціалізація з ортодонтії</span>
+    <span>2020 - 2021</span>
+  </div>
+
+  <div>
+    <div>ДВНЗ "Ужгородський національний університет"</div>
+    <span>інтернатура, стоматологічний факультет</span>
+    <span>2018 - 2020</span>
+  </div>
+
+  <div>
+    <div>ДВНЗ "Ужгородський національний університет"</div>
+    <span>юридичний факультет, бакалавр права</span>
+    <span>2014 - 2019</span>
+  </div>
+
+  <div>
+    <div>ДВНЗ "Ужгородський національний університет"</div>
+    <span>стоматологічний факультет, спеціаліст</span>
+    <span>2013 - 2018</span>
+  </div>
+</div>
+
+<div style="text-align: center; margin-top: 0px; margin-bottom: 20px;"><img width="100%" height="2px"
+    src="./assets/images/Rectangle 21.png" alt=""></div>
+<div id="about">
+  <hr width="40%;" color="#262626" size="3" align="left">
+  <span class="n">
+    Про себе
   </span>
-  
-    <hr width="40%;" 
-    color="#262626" 
-    size="3" 
-    align="left"> 
-  
+
+  <hr width="40%;" color="#262626" size="3" align="left">
+
+</div>
+<div style="padding: 20px; margin-bottom: -25px; font-size: 20px; font-family: 'Futura Pt'; text-align: center; ">ввічливий та професійний,
+  умію запропонувати пацієнту найкращий варіант з багатьох наявних, ціную комфорт: як свій, так і пацієнтів з колегами.
+  Постійно розвиваюся. Етичний по відношенню до колег. Маю орієнтовний прайс та власні матеріали. Розробив документацію
+  для прийомів, яку також оцифровою. Усе наочно пояснюю пацієнтам.</div>
+<footer id="footer">
+  <span id="foot1">вулиця Минайська, 35А, Ужгород, Закарпатська область, 88000</span>
+  <div id="foot2"><img width="40px" src="./assets/images/Instagram.png" alt="">
+    <img width="40px" src="./assets/images/Facebook_white.png" alt="">
+    <img width="40px" src="./assets/images/tel.png" alt="">
   </div>
-  <div style="padding: 20px; margin-bottom: -25px; font-size: 20px; font-family: 'Futura Pt' ">ввічливий та професійний, умію запропонувати пацієнту найкращий варіант з багатьох наявних, ціную комфорт: як свій, так і пацієнтів з колегами. Постійно розвиваюся. Етичний по відношенню до колег. Маю орієнтовний прайс та власні матеріали. Розробив документацію для прийомів, яку також оцифровою. Усе наочно пояснюю пацієнтам.</div>
+  <span id="foot3">(066) xxx-xx-xx<br>
+    (066) xxx-xx-xx</span>
+</footer>
+
+</html>
