--- a/src/app/braces/braces.component.css
+++ b/src/app/braces/braces.component.css
@@ -585,4 +585,23 @@ a:hover{
    
   }
 
+
+  #navbar span {
+    font-size: 18px;
+  }
   
+  @media screen and (max-width: 1000px) {
+    #navbar span {
+      font-size: 14px;
+    }
+  
+    #logo{
+      margin-top: 10px;
+    }
+  
+  }
+  
+  #mob_menu span :hover{
+    color: white;
+    cursor:default
+  }
