--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -757,3 +757,23 @@ padding-right: 70px;
 }
 
     }
+
+    #navbar span {
+      font-size: 18px;
+    }
+    
+    @media screen and (max-width: 1000px) {
+      #navbar span {
+        font-size: 14px;
+      }
+    
+      #logo{
+        margin-top: 10px;
+      }
+    
+    }
+
+    #mob_menu span :hover{
+      color: white;
+      cursor:default
+    }
